Fix wrapping of code blocks
[finishes #94442532]

--- a/app/assets/stylesheets/_components.sass
+++ b/app/assets/stylesheets/_components.sass
@@ -157,11 +157,11 @@ form
     code
       display: block
       background: $light
-      padding: 2em
+      padding: 1em
       width: 100%
-      overflow: auto
       box-sizing: border-box
       line-height: 1.6
+      white-space: pre-wrap
       +mobile
         padding: 1em
   code
